k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: topmarket-namespace
  labels:
    app: topmarket
