k8s/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: topmarket-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topmarket-backend
  namespace: topmarket-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: milan071/topmarket-backend:latest
          ports:
            - containerPort: 3002
