k8s/05-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: topmarket-namespace
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topmarket-worker
  namespace: topmarket-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: milan071/topmarket-worker:latest
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 3001
