k8s/06-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: topmarket-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topmarket-frontend
  namespace: topmarket-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: milan071/topmarket-frontend:latest
          ports:
            - containerPort: 3000
